@@ -248,6 +248,7 @@
 "Main disc":"Hlavní disk",
 "Main menu":"Hlavní nabídka",
 "Manage players":"Správa přehrávačů",
+"Manage plugins":"Správa zásuvných modulů",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin je HTML5 webová aplikace pro LMS. Pro podporu, nahlášení chyby či žádost o novou funkcionalitu prosím využijte některý z následujících odkazů:",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin je vyvíjen čistě pro zábavu a dary nejsou nutné. Pokud si přesto přejete přispět, použijte prosím tlačítko níže:",
 "Media keys and notifications":"Tlačítka médií a oznámení",
