@@ -261,6 +261,7 @@
 "Main disc":"Hoved CD",
 "Main menu":"Hovedmenu",
 "Manage players":"Administrer alle afspillere",
+"Manage plugins":"Udvidelsesmoduler",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin er en HTML5 WebApp for LMS. For hjælp, for at raportere fejl eller for at spørge efter nye funktioner kan du besøge et af følgende links:",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin er udviklet for sjov skyld, og det er ikke nødvendigt at donere penge. Hvis du alligevel gerne vil lave en donation, kan du bruge knappen nedenfor:",
 "Media keys and notifications":"Medietaster og beskeder",
