@@ -261,6 +261,7 @@
 "Main disc":"Haupt-CD",
 "Main menu":"Hauptmenü",
 "Manage players":"Player verwalten",
+"Manage plugins":"Plugins verwalten",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin ist eine HTML5 Web-Anwendung für den Logitech Media Server. Für Hilfe, Fehlerberichte oder Funktionsvorschläge besuche einen der folgenden Links:",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin wird aus Spaß an der Sache entwickelt, Spenden werden nicht erwartet. Falls Du die Entwicklung dennoch mit einer Spende unterstützen willst, verwende diesen Knopf:",
 "Media keys and notifications":"Multimediatasten und Benachrichtigungen",
