@@ -270,6 +270,7 @@
 "Main disc":"",
 "Main menu":"",
 "Manage players":"",
+"Manage plugins":"",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"",
 "Media keys and notifications":"",
