@@ -261,6 +261,7 @@
 "Main disc":"Disque principal",
 "Main menu":"Menu principal",
 "Manage players":"Gérer les platines",
+"Manage plugins":"Gérer les plugins",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin est une application Web HTML5 pour LMS. Pour obtenir de l'aide, signaler des bugs ou demander de nouvelles fonctionnalités, veuillez visiter l'un des liens suivants :",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin est développé uniquement pour le plaisir, aucun don n'est requis. Toutefois, si vous souhaitez faire un don, veuillez utiliser le bouton ci-dessous :",
 "Media keys and notifications":"Touches multimédias et notifications",
