@@ -422,6 +422,7 @@
 "MAC Address: %1":"",
 "Main disc":"",
 "Main menu":"",
+"Manage plugins":"",
 "Media keys and notifications":"",
 "Media sources":"",
 "Menu":"",
