@@ -261,6 +261,7 @@
 "Main disc":"Hoofd disc",
 "Main menu":"Hoofdmenu",
 "Manage players":"Beheer muziekspelers",
+"Manage plugins":"Beheer plug-ins",
 "Material Skin is a HTML5 WebApp for LMS. For support, to report bugs, or ask for new features, please visit one of the following links:":"Material Skin is een HTML5 WebApp voor LMS. Voor support, rapporteren van bugs, of aanvragen van nieuwe features, bezoek svp een van de volgende links:",
 "Material Skin is developed purely for fun, and no donations are required. However, if you wish to make a donation, please use the button below:":"Material Skin is ontwikkeld voor de lol, donaties zijn niet verplicht. Echter, als je een donatie wilt doen, klik dan op onderstaande knop:",
 "Media keys and notifications":"Mediatoetsen en meldingen",
