@@ -1,5 +1,6 @@
 {
 "Create Mix":"Плей-лист под настроение",
+"Manage plugins":"Подключаемые модули",
 "Use three lines (title, artist, album) to show track details.":"Используйте три строки (название, исполнитель, альбом), чтобы показать детали трека.",
 "%1 (Menu)":"",
 "%1 minutes":"",
