@@ -649,5 +649,6 @@
 "%1 Years":"%1 个年份",
 "1 day":"1 天",
 "%1 days":"%1 天",
+"Manage plugins":"",
 "Zoom":""
 }
