@@ -594,6 +594,7 @@
 "Highlight current lyric line":"",
 "Icon":"",
 "If background images have been enabled (see options below), then use a default image if there is no current image.":"",
+"Manage plugins":"",
 "Media sources":"",
 "Mobile layout now-playing bar":"",
 "Next":"",
